--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
+    "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
@@ -31,7 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.1"
   }
 }
